media/error_tc/error_248.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_HDhaQYi.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_HDhaQYi.cpp:8:1: error: expected ';' before '}' token
 }
 ^
